--- a/src/main/resources/templates/cadastrarCli.html
+++ b/src/main/resources/templates/cadastrarCli.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
@@ -42,7 +43,7 @@
 <header class="masthead text-dark text-center">
     <div class="container box-left" >
         <div class="page-header">
-            <h1>Bem vindo(a), <span sec:authentication="name"></span>!</h1>
+            <h4>Bem vindo(a), <span sec:authentication="name"></span>!</h4>
         </div>
         <div class="row">
             <div class="col-3"> <i class="fas fa-address-book fa-3x float-left "></i></div>
@@ -86,8 +87,6 @@
     </div>
     <h3 class="text-center" >Cadastro de Cliente</h3>
     <div class="container box">
-        <!-- <div class="row">-->
-        <!--<div class="col-xl-9 mx-auto">-->
 
         <form method="POST" action="/salvarCli">
             <label for="nomeCli">Nome:<input type="text" name="nomeCli" id="nomeCli" class="form-control" placeholder="digite o seu nome" ></label>
