--- a/src/main/resources/templates/cadastroFuncionario.html
+++ b/src/main/resources/templates/cadastroFuncionario.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
