--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -47,7 +47,7 @@
       </div>
         <h1>Login</h1>
       <!--      </div>-->
-          <form  th:action="@{/login}" method="POST" sec:authorize="hasRole('ADMIN')">
+          <form  th:action="@{/login}" method="POST">
             <label for="username">E-mail:<input type="email" name="username" id="username" class="form-control" placeholder="digite o seu e-mail" /></label>
             <br>
             <br>
