--- a/src/main/resources/templates/editarRoupaUtensilios.html
+++ b/src/main/resources/templates/editarRoupaUtensilios.html
@@ -69,21 +69,7 @@
             <br>
         </div>
 
-        <div class="row">
-            <div class="col-3"><i class="fas fa-calendar-alt fa-3x float-left"></i></div>
-            <div class="col-9 text-left"> <a href="/atualizarData" class="tamfonte">Atualizar Data de Entrega.</a> </div>
-            <br>
-            <br>
-            <br>
-        </div>
 
-        <div class="row">
-            <div class="col-3"> <i class="fas fa-calendar-alt fa-3x float-left"></i></div>
-            <div class="col-9 text-left">    <a href="/atualizarRetirada" class="tamfonte">Atualizar Data de Retirada.</a> </div>
-            <br>
-            <br>
-            <br>
-        </div>
 
     </div>
     <div class="container box">
@@ -91,7 +77,7 @@
         <!--<div class="col-xl-9 mx-auto">-->
 
         <form action="/editarRoupaUtensilios" method="POST" >
-            <label for="codRoupaUtensilios">Código:<input type="number" name="codRoupaUtensilios" id="codRoupaUtensilios" class="form-control" th:field="${roupaU.codRoupaUtensilios}"></label>
+            <input type="hidden" name="codRoupaUtensilios" id="codRoupaUtensilios" class="form-control" th:field="${roupaU.codRoupaUtensilios}">
 
             <label for="tamanho">Tamanho:<input type="text" name="tamanho" id="tamanho" class="form-control" th:field="${roupaU.tamanho}" ></label>
             <br>
