--- a/src/main/resources/templates/acharRoupaUtensilios.html
+++ b/src/main/resources/templates/acharRoupaUtensilios.html
@@ -68,21 +68,7 @@
             <br>
         </div>
 
-        <div class="row">
-            <div class="col-3"><i class="fas fa-calendar-alt fa-3x float-left"></i></div>
-            <div class="col-9 text-left"> <a href="/atualizarData" class="tamfonte">Atualizar Data de Entrega.</a> </div>
-            <br>
-            <br>
-            <br>
-        </div>
 
-        <div class="row">
-            <div class="col-3"> <i class="fas fa-calendar-alt fa-3x float-left"></i></div>
-            <div class="col-9 text-left">    <a href="/atualizarRetirada" class="tamfonte">Atualizar Data de Retirada.</a> </div>
-            <br>
-            <br>
-            <br>
-        </div>
 
     </div>
     <h3 class="text-center" >Busca de Roupa ou Utensílio</h3>
@@ -99,14 +85,16 @@
     </div>
 
     <div class="card posicao" style="width: 50%;">
-        <!--/*@thymesVar id="equals" type=""*/-->
+        <div class="panel-heading letra">
 
+            <span th:text="${#strings.isEmpty(message)} ? '' : ${message}"><b></b></span>
+        </div>
         <div class="card-body">
             <table class="table">
                 <thead>
                 <tr>
-                    <th scope="col">Número</th>
-                    <th scope="col">Nome</th>
+                    <th scope="col">Código</th>
+                    <th scope="col">Cor</th>
                     <th scope="col">Ação</th>
                 </tr>
                 </thead>
@@ -120,9 +108,9 @@
                     <th th:text="${ru.cor}"></th>
                     <th th:text="${ru.codRoupaUtensilios}"></th>
 
-<!--                    <td><a class="btn btn-primary ml-5" th:href="${#mvc.url('CC#buscarRoupaUtensilios').arg(0, ).build()}" role="button">Editar</a>-->
-<!--                        <a class="btn btn-primary ml-5" th:href="${#mvc.url('CC#excluirCli').arg(0,).build()}" role="button">Excluir</a></td>-->
-<!--                </tr>-->
+                    <td><a class="btn btn-primary ml-5" th:href="${#mvc.url('RUC#buscarRoupaUtensilios').arg(0,ru.codRoupaUtensilios ).build()}" role="button">Editar</a>
+                    <a class="btn btn-primary ml-5" th:href="${#mvc.url('RUC#excluirRoupaUtensilios').arg(0,ru.codRoupaUtensilios ).build()}" role="button">Excluir</a></td>
+                </tr>
                 </tbody>
             </table>
         </div>
