--- a/src/main/resources/static/css/landing-page.css
+++ b/src/main/resources/static/css/landing-page.css
@@ -113,7 +113,9 @@ header.masthead p {
   padding-top: 7rem;
   padding-bottom: 7rem;
 }
-
+span{
+  font-size: 20px;
+}
 .ml-5 {
   margin-left: ($spacer * 3) !important;
 }
